<resources>
    <string name="app_name">অবসর</string>
    <string name="chairman_barta_content">অর্থহীন লেখা যার মাঝে আছে অনেক কিছু। হ্যাঁ, এই লেখার মাঝেই আছে অনেক কিছু। যদি তুমি মনে করো, এটা তোমার কাজে লাগবে, তাহলে তা লাগবে কাজে। নিজের ভাষায় লেখা দেখতে অভ্যস্ত হও। মনে রাখবে লেখা অর্থহীন হয়, যখন তুমি তাকে অর্থহীন মনে করো; আর লেখা অর্থবোধকতা তৈরি করে, যখন তুমি তাতে অর্থ ঢালো। যেকোনো লেখাই তোমার কাছে অর্থবোধকতা তৈরি করতে পারে, যদি তুমি সেখানে অর্থদ্যোতনা দেখতে পাও। …ছিদ্রান্বেষণ? না, তা হবে কে</string>
    <string name="chairman_barta_title">চেয়ারম্যান এর বার্তা</string>
    <string name="chairman_name">মোঃ মাহবুব হোসেন</string>
    <string name="app_title_main">অবসর</string>
    <string name="chairman_image_desciption">Chairman Image</string>
    <string name="next_main_activity">পরবর্তী</string>
    <string name="menu_notice">নোটিশ বোর্ড</string>
    <string name="menu_home">বর্তমান অবস্থা</string>
    <string name="menu_links">গুরুত্বপূর্ণ লিঙ্ক</string>
    <string name="menu_about">আমাদের সম্পর্কে</string>
    <string name="menu_contact">যোগাযোগ</string>
    <string name="menu_faq">সচরাচর জিজ্ঞাসা</string>
    <string name="language_toggle">বাংলা</string>
    <string name="index_code_hint">P-123456</string>
    <string name="search">খুঁজুন</string>
    <string name="index_search_title_text">প্রিফিক্স সহ আপনার ইনডেক্স নম্বর লিখুন</string>
    <string name="otp_phone_number">01234564567</string>
    <string name="otp_subtitle_text">উক্ত নম্বরে একটি যাচাই করণ কোড পাঠানো হয়েছে</string>
    <string name="otp_code_hint">কোড</string>
    <string name="examine">লগইন করুন</string>
    <string name="did_not_get_otp">এখনো পাননি ?</string>
    <string name="resend_otp">নতুন কোড পাঠান</string>
    <string name="app_title_secondary">বর্তমান অবস্থা</string>
    <string name="institute_type_title">প্রতিষ্ঠানের ধরন</string>
    <string name="school">স্কুল</string>
    <string name="college">কলেজ</string>
    <string name="karigori">কারিগরি</string>
    <string name="madrasha">মাদ্রাসা</string>
    <string name="text_applied_before">আপনি কি আবেদন সম্পন্ন করেছেন?</string>
        <string name="yes">হ্যাঁ</string>
    <string name="no">না</string>
    <string name="okay">ঠিক আছে</string>
    <string name="visit">দেখুন</string>
    <string name="technical_help">কারিগরি সহযোগিতায় ADN Telecom</string>
    <string name="app_base_url">http://apps.terbb.gov.bd/</string>
    <string name="registration_url">http://apps.terbb.gov.bd/registration</string>
    <string name="api_base_url">http://apps.terbb.gov.bd/api/</string>
    <string name="review">রিভিউ\n</string>
    <string name="menu_notice2">নোটিশ বোর্ড\n</string>
    <string name="menu_links2">গুরুত্বপূর্ণ লিঙ্ক\n</string>
    <string name="menu_about2">আমাদের সম্পর্কে\n</string>
    <string name="menu_contact2">যোগাযোগ\n</string>
    <string name="menu_faq2">সচরাচর জিজ্ঞাসা\n</string>
    <string name="bani">\"বক্তব্য\"</string>
    <string name="link_one">মাধ্যমিক ও উচ্চ শিক্ষা অধিদপ্তর</string>
    <string name="link_two">শিক্ষা মন্ত্রণালয় (বাংলাদেশ সরকার)</string>
    <string name="link_three">বাংলাদেশ শিক্ষাতথ্য ও পরিসংখ্যান ব্যুরো (ব্যানবেইস)</string>
    <string name="qoutes1">আসসালামুআলাইকুম/আদাব\n\n

সম্মানিত শিক্ষক ও কর্মচারীবৃন্দ।\n\n

অতীতের সেকেলে পদ্ধতি পরিবর্তন করে অবসর সুবিধার অর্থ প্রদানের যাবতীয় বিষয় বর্তমানে ডিজিটাইজ করা হয়েছে।
        অনলাইনে আবেদন করা এবং ইএফটি পদ্ধতিতে অবসরের টাকা শিক্ষক-কর্মচারীদের একাউন্টে প্রেরণের বিষয়টি আমি ২০১৮ সালে উদ্বোধন করেছিলাম।
        মাননীয় প্রধানমন্ত্রী জননেত্রী শেখ হাসিনা ডিজিটাল বাংলাদেশের যে ভিশন দিয়েছিলেন তার অংশ হিসাবে শিক্ষা ক্ষেত্রে সকল বিষয়ে অটোমেশন নিয়ে আসতে চাই।
        এই অটোমেশনের কারণে অবসরে যাওয়া শিক্ষক-কর্মচারীদের শারীরিক মানসিক ও আর্থিক অনেক হয়রানী দূর হয়েছে।
        ‘অবসর’ নামক এই অ্যাপস চালুর মাধ্যমে অবসর ভাতা প্রাপ্তির সামগ্রিক বিষয়টি আরও সহজতর হবে। ড
        িজিটাইজেশনের চলমান প্রক্রিয়াটি যেন কখনোও থেমে না যায় বরং আরও গতিশীল হয় সেই ইচ্ছা পোষণ করি।
        দেশের সকল শিক্ষক-কর্মচারীদের প্রতি আমার শুভেচ্ছা রইল।\n\n

জয় বাংলা, জয় বঙ্গবন্ধু।\n

বাংলাদেশ চিরজীবী হোক।</string>
    <string name="qoutes2">আসসালামুআলাইকুম/আদাব\n\n

সম্মানিত শিক্ষক ও কর্মচারীবৃন্দ।\n\n

আমাদের প্রিয় মাতৃভূমি বাংলাদেশের বদনখানি এখন আর মলিন নেই, বাংলাদেশ এখন হাস্যোজ্জ্বল।
        অর্থনৈতিকভাবে বাংলাদেশ এখন অনেক সমৃদ্ধ।
        এর পেছনের অন্যতম কারণ প্রযুক্তিগত উন্নয়ন এবং এর মূল কারিগর মাননীয় প্রধানমন্ত্রী জননেত্রী শেখ হাসিনা।
        অবসর সুবিধা বোর্ড সেই পথে এগিয়ে যাচ্ছে।
        সারা দেশের শিক্ষক-কর্মচারীদের সেবা সহজীকরণের লক্ষ্যে ‘অবসর’ নামে একটি অ্যাপস চালু হচ্ছে যেনে খুব খুশি হয়েছি।
        সংশ্লিষ্ট সকলকে অভিনন্দন ও শুভেচ্ছা।\n\n

জয় বাংলা, জয় বঙ্গবন্ধু।\n

বাংলাদেশ চিরজীবী হোক।</string>

    <string name="qoutes3">আসসালামুআলাইকুম/আদাব\n\n

সম্মানিত শিক্ষক ও কর্মচারীবৃন্দ।\n\n

জাতীর পিতা বঙ্গবন্ধু শেখ মুজিবুর রহমানে স্বপ্নের সোনার বাংলা তাঁরই কন্যা মাননীয় প্রধানমন্ত্রী জননেত্রী শেখ হাসিনার হাত দিয়ে গড়ে উঠেছে,
        আগের সেই দরিদ্রকে আমরা বিদায় দিয়েছি। মাননীয় প্রধানমন্ত্রীর পরিকল্পনায় ঐক্যবদ্ধভাবে কাজ হচ্ছে বলে দেশ এগিয়ে যাচ্ছে,
        অবসর সুবিধা বোর্ড অতীতের অনেক সমস্যা সংকট কাটিয়ে বর্তমানে শিক্ষক-কর্মচারীদের দোর-গোড়ায় তাদের সেবা কার্যক্রম পৌঁছে দিচ্ছে।
        ‘অবসর’ নামে অ্যাপস চালু হচ্ছে এটি আরেকটি অগ্রগতি, সকলকে শুভেচ্ছা।\n\n

মো. মাহবুব হোসেন\n

সচিব\n

মাধ্যমিক ও উচ্চ শিক্ষা বিভাগ\n

শিক্ষা মন্ত্রণালয়। </string>
    <string name="qoutes4">আসসালামুআলাইকুম/আদাব\n\n

সম্মানিত শিক্ষক ও কর্মচারীবৃন্দ।\n\n

জাতীর পিতা বঙ্গবন্ধু শেখ মুজিবুর রহমানে স্বপ্নের সোনার বাংলা তাঁরই কন্যা মাননীয় প্রধানমন্ত্রী জননেত্রী শেখ হাসিনার হাত দিয়ে গড়ে উঠেছে,
        আগের সেই দরিদ্রকে আমরা বিদায় দিয়েছি। মাননীয় প্রধানমন্ত্রীর পরিকল্পনায় ঐক্যবদ্ধভাবে কাজ হচ্ছে বলে দেশ এগিয়ে যাচ্ছে,
        অবসর সুবিধা বোর্ড অতীতের অনেক সমস্যা সংকট কাটিয়ে বর্তমানে শিক্ষক-কর্মচারীদের দোর-গোড়ায় তাদের সেবা কার্যক্রম পৌঁছে দিচ্ছে।
        ‘অবসর’ নামে অ্যাপস চালু হচ্ছে এটি আরেকটি অগ্রগতি, সকলকে শুভেচ্ছা।\n\n

মো. আমিনুল ইসলাম খান\n

সচিব\n

কারিগরি ও মাদ্রাসা শিক্ষা বিভাগ\n

শিক্ষা মন্ত্রণালয়। </string>
    <string name="qoutes5">আসসালামুআলাইকুম/আদাব\n\n

সম্মানিত শিক্ষক ও কর্মচারীবৃন্দ।\n\n

জাতীর পিতা বঙ্গবন্ধু শেখ মুজিবুর রহমানে স্বপ্নের সোনার বাংলা তাঁরই কন্যা মাননীয় প্রধানমন্ত্রী জননেত্রী শেখ হাসিনার হাত দিয়ে গড়ে উঠেছে,
        আগের সেই দরিদ্রকে আমরা বিদায় দিয়েছি। মাননীয় প্রধানমন্ত্রীর পরিকল্পনায় ঐক্যবদ্ধভাবে কাজ হচ্ছে বলে দেশ এগিয়ে যাচ্ছে,
        অবসর সুবিধা বোর্ড অতীতের অনেক সমস্যা সংকট কাটিয়ে বর্তমানে শিক্ষক-কর্মচারীদের দোর-গোড়ায় তাদের সেবা কার্যক্রম পৌঁছে দিচ্ছে।
        ‘অবসর’ নামে অ্যাপস চালু হচ্ছে এটি আরেকটি অগ্রগতি, সকলকে শুভেচ্ছা।\n\n

প্রফেসর ড. সৈয়দ মোঃ গোলাম ফারুক\n

সচিব\n

মহাপরিচালক (মাধ্যমিক ও উচ্চ শিক্ষা বিভাগ)\n

শিক্ষা মন্ত্রণালয়। </string>
    <string name="qoutes6">আসসালামুআলাইকুম/আদাব\n\n

সম্মানিত শিক্ষক ও কর্মচারীবৃন্দ।\n\n

অতীতের সেকেলে পদ্ধতি পরিবর্তন করে অবসর সুবিধার অর্থ প্রদানের যাবতীয় বিষয় বর্তমানে ডিজিটাইজ করা হয়েছে।
        অনলাইনে আবেদন করা এবং ইএফটি পদ্ধতিতে অবসরের টাকা শিক্ষক-কর্মচারীদের একাউন্টে প্রেরণের বিষয়টি আমি ২০১৮ সালে উদ্বোধন করেছিলাম।
        মাননীয় প্রধানমন্ত্রী জননেত্রী শেখ হাসিনা ডিজিটাল বাংলাদেশের যে ভিশন দিয়েছিলেন তার অংশ হিসাবে শিক্ষা ক্ষেত্রে সকল বিষয়ে অটোমেশন নিয়ে আসতে চাই।
        এই অটোমেশনের কারণে অবসরে যাওয়া শিক্ষক-কর্মচারীদের শারীরিক মানসিক ও আর্থিক অনেক হয়রানী দূর হয়েছে।
        ‘অবসর’ নামক এই অ্যাপস চালুর মাধ্যমে অবসর ভাতা প্রাপ্তির সামগ্রিক বিষয়টি আরও সহজতর হবে। ড
        িজিটাইজেশনের চলমান প্রক্রিয়াটি যেন কখনোও থেমে না যায় বরং আরও গতিশীল হয় সেই ইচ্ছা পোষণ করি।
        দেশের সকল শিক্ষক-কর্মচারীদের প্রতি আমার শুভেচ্ছা রইল।\n\n

জয় বাংলা, জয় বঙ্গবন্ধু।\n

বাংলাদেশ চিরজীবী হোক।</string>

    <string name="web_site">www.terbb.gov.bd</string>
    <string name="contact">০২২২৩৩৬২১৮২\n০২৫৫১৫২০৯৭</string>
    <string name="address">Eden Lake, BANBEIS Bhaban, 1 Jahir Raihan Road (Palashi, Nilkhet Rd, Dhaka 1205</string>
    <string name="map_url">https://www.google.com/maps/place/Bangladesh+Bureau+of+Educational+Information+and+Statistics/@23.728611,90.388056,15z/data=!4m5!3m4!1s0x0:0xf5b8f04a93fd61e!8m2!3d23.7286095!4d90.388048?hl=en-US</string>
    <string name="history">ইতিহাস</string>
    <string name="mission">লক্ষ্য ও উদ্দেশ্য</string>
    <string name="employee">কর্মকর্তাবৃন্দ</string>
    <string name="cityzen">সিটিজেন চার্টার</string>
    <string name="committe">কমিটি</string>
</resources>