<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimaryVariant"
    tools:context=".UI.FormActivity">

    <Toolbar
        android:id="@+id/nav_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/gradient"
        android:elevation="4dp"
        android:title="@string/app_title_main"
        android:titleTextColor="@color/white"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:layout_constraintTop_toTopOf="parent"
    />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center"
        android:layout_margin="20dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:textSize="20sp"
            android:text="@string/institute_type_title"
        />

        <TextView
            android:id="@+id/school"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="5dp"
            android:textColor="@color/white"
            android:background="@drawable/btn_back"
            android:textSize="20sp"
            android:text="@string/school"
        />

        <TextView
            android:id="@+id/college"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="5dp"
            android:textColor="@color/white"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_back"
            android:textSize="20sp"
            android:text="@string/college"
        />

        <TextView
            android:id="@+id/karigori"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="5dp"
            android:textColor="@color/white"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_back"
            android:textSize="20sp"
            android:text="@string/karigori"
        />


        <TextView
            android:id="@+id/madrasha"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="5dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/white"
            android:background="@drawable/btn_back"
            android:textSize="20sp"
            android:text="@string/madrasha"
        />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:textSize="20sp"
            android:text="@string/text_applied_before"
        />

        <RadioGroup
            android:id="@+id/done_before"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="20dp">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:text="@string/yes"
            />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:text="@string/no"
            />
        </RadioGroup>

        <TextView
            android:id="@+id/submit_form"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="5dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/white"
            android:background="@drawable/btn_back"
            android:textSize="20sp"
            android:text="@string/okay"
        />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>