<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.MemberDetailsActivity">

    <Toolbar
        android:id="@+id/nav_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/gradient"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        android:title="বিস্তারিত"
        android:titleTextColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.DayNight" />


    <ImageView
        android:id="@+id/image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/chairman_image_desciption"
        android:maxWidth="150dp"
        android:maxHeight="200dp"
        android:minWidth="125dp"
        android:minHeight="125dp"
        android:scaleType="fitXY"
        android:layout_centerInParent="true"
        android:layout_below="@+id/nav_toolbar"
        android:src="@drawable/secratary" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chairman_name"
        android:textSize="14sp"
        android:layout_centerInParent="true"
        android:layout_margin="8dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_below="@+id/image"/>

    <TextView
        android:id="@+id/designation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="মাননীয় শিক্ষা মন্ত্রি (বাংলাদেশ সরকার)"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:layout_centerInParent="true"
        android:layout_below="@+id/name"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/designation"
        android:layout_centerInParent="true"
        android:layout_marginTop="8dp"
        android:text="@string/bani"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="8dp"
        android:scrollbars="none"
        android:layout_below="@+id/textView3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/quotes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/qoutes1"
                android:textColor="@color/black"
                android:textSize="14sp" />

        </LinearLayout>

    </ScrollView>



</RelativeLayout>