<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.ImportantLinkActivity">


    <Toolbar
        android:id="@+id/nav_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/gradient"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        android:title="@string/menu_links"
        android:titleTextColor="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.DayNight" />


    <androidx.cardview.widget.CardView
        android:id="@+id/linkOneCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:backgroundTint="@color/primary_variant"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nav_toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="10dp"
                android:layout_gravity="center"
                android:text="@string/link_one"
                android:textColor="@color/primary"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/linkOne"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:text="@string/visit"
                android:textStyle="bold"
                android:gravity="center"
                android:textColor="@color/white"
                android:background="@drawable/btn_back"
                android:textSize="14sp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/linkTwoCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:backgroundTint="@color/primary_variant"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linkOneCard">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="10dp"
                android:layout_gravity="center"
                android:text="@string/link_two"
                android:textColor="@color/primary"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/linkTwo"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:text="@string/visit"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:background="@drawable/btn_back"
                android:textSize="14sp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/linkThreeCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:backgroundTint="@color/primary_variant"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linkTwoCard">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="10dp"
                android:layout_gravity="center"
                android:text="@string/link_three"
                android:textColor="@color/primary"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/linkThree"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:text="@string/visit"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:background="@drawable/btn_back"
                android:textSize="14sp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>